Fix wrong font format

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -2,7 +2,7 @@
   font-family: 'TrebuchetMS';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/TrebuchetMS.ttf') format('ttf');
+  src: url('../assets/fonts/TrebuchetMS.ttf') format('truetype');
 }
 
 $max-border-radius: 10000px;
